--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-@charset "utf-8";html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,a,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;vertical-align:baseline}body{line-height:1}article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary{display:block}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}ins{background-color:#ff9;color:#000;text-decoration:none}img{-ms-interpolation-mode:bicubic;vertical-align:middle}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:700}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted #000;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}em{font-style:normal;font-weight:700}input,select{vertical-align:middle}.vhidden{position:absolute;text-align:left;direction:ltr;left:-9999em;height:1px}.clearfix:before,.clearfix:after{content:"\0020";display:block;height:0;visibility:hidden}.clearfix:after{clear:both}.clearfix{zoom:1}#skiplinks{position:absolute;left:-9999px}body{width:960px;margin:0 auto;background:#f5f5f5;font-family:"Helvetica Neue","Helvetica",Arial,sans-serif;color:#5b323e}.tag.man{color:#8b93b2}.tag.woman{color:#e06c76}.tag.geek{color:#fcac24}.tag.culture{color:#91517d}.tag.sport{color:#6abb8b}.tag.house{color:#999}header .tag.man,nav .tag.man{border-bottom-color:rgba(139,147,178,.3)}header .tag.woman,nav .tag.woman{border-bottom-color:rgba(224,108,118,.3)}header .tag.geek,nav .tag.geek{border-bottom-color:rgba(252,172,36,.3)}header .tag.culture,nav .tag.culture{border-bottom-color:rgba(145,81,125,.3)}header .tag.sport,nav .tag.sport{border-bottom-color:rgba(106,187,139,.3)}header .tag.house,nav .tag.house{border-bottom-color:rgba(153,153,153,.3)}header .tag,nav .tag{text-decoration:none;font-weight:700;height:1.3em;padding-bottom:-2px;display:inline-block;border-bottom:1px solid}header .tag.man:hover,nav .tag.man:hover{color:rgba(139,147,178,.8)}header .tag.woman:hover,nav .tag.woman:hover{color:rgba(224,108,118,.8)}header .tag.geek:hover,nav .tag.geek:hover{color:rgba(252,172,36,.8)}header .tag.culture:hover,nav .tag.culture:hover{color:rgba(145,81,125,.8)}header .tag.sport:hover,nav .tag.sport:hover{color:rgba(106,187,139,.8)}header .tag.house:hover,nav .tag.house:hover{color:rgba(153,153,153,.8)}header h1{float:left;width:29.166666666666668%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;height:100px;margin-top:50px;margin-bottom:50px;text-indent:101%;white-space:nowrap;overflow:hidden;background-image:url("../images/presenteria.png");background-repeat:no-repeat;background-position:50% 50%}header .side{float:right;font-size:1.1em}header .intro{margin-top:40px;text-align:right;line-height:1.5}header .tag{font-size:1.3em}header .share{margin-top:20px;float:right}header .share li{float:left}nav{display:none}#content{clear:both}.gift{float:left;width:22.916666666666668%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;position:relative}.gift .product{color:#5b323e;display:block;overflow:hidden;text-decoration:none}.gift .photo{background:#fff;position:relative}.gift .photo img{width:100%}.gift .description,.gift .vendor{margin-top:6px}.gift .description{display:inline-block}.gift .vendor{float:right}.gift .store{text-indent:101%;white-space:nowrap;overflow:hidden;display:inline-block;width:16px;height:16px;margin-right:2px}.gift .store.thinkgeek{background:url("../images/vendors/thinkgeek.png")}.gift .price{display:inline-block;font-weight:700}.gift .tags{position:absolute;top:4px;left:4px}.gift .tags li{float:left;margin-right:3px}.gift .tag{font-size:0;line-height:0;display:block;width:6px;height:6px;overflow:hidden;text-decoration:none}.gift .tag.man{background:#8b93b2}.gift .tag.woman{background:#e06c76}.gift .tag.geek{background:#fcac24}.gift .tag.culture{background:#91517d}.gift .tag.sport{background:#6abb8b}.gift .tag.house{background:#999}.gift:hover .photo{z-index:100}.gift:hover .tags{-webkit-transition:top .1s ease-out;-moz-transition:top .1s ease-out;-o-transition:top .1s ease-out;-ms-transition:top .1s ease-out;transition:top .1s ease-out;top:-28px;left:0}.gift:hover .tag{-webkit-transition:height .1s ease-out;-moz-transition:height .1s ease-out;-o-transition:height .1s ease-out;-ms-transition:height .1s ease-out;transition:height .1s ease-out;height:28px;width:auto;line-height:28px;font-size:1em;padding:0 10px}.gift:hover .tag:hover{color:#fff}.gift:hover .tag.man{background:rgba(139,147,178,.2)}.gift:hover .tag.woman{background:rgba(224,108,118,.2)}.gift:hover .tag.geek{background:rgba(252,172,36,.2)}.gift:hover .tag.culture{background:rgba(145,81,125,.2)}.gift:hover .tag.sport{background:rgba(106,187,139,.2)}.gift:hover .tag.house{background:rgba(153,153,153,.2)}.gift:hover .tag.man:hover{background:#8b93b2}.gift:hover .tag.woman:hover{background:#e06c76}.gift:hover .tag.geek:hover{background:#fcac24}.gift:hover .tag.culture:hover{background:#91517d}.gift:hover .tag.sport:hover{background:#6abb8b}.gift:hover .tag.house:hover{background:#999}@-moz-viewport{width:device-width}@-webkit-viewport{width:device-width}@-o-viewport{width:device-width}@-ms-viewport{width:device-width}@viewport{width:device-width}@media print{*{background:transparent!important;color:#000!important;text-shadow:none!important}a,a:visited{color:#444!important;text-decoration:underline}a[href]:after{content:" (" attr(href)")"}abbr[title]:after{content:" (" attr(title)")"}.ir a:after{content:""}pre,blockquote{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}tr,img{page-break-inside:avoid}@page{margin:.5cm}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}
-=======
 @charset "utf-8";
 @media (grifo) {
 /*  
@@ -115,8 +112,8 @@ header .tag,
 nav .tag {
   text-decoration: none;
   font-weight: 700;
+  line-height: 1.6;
   height: 1.3em;
-  padding-bottom: -2px;
   display: inline-block;
   border-bottom: 1px solid;
 }
@@ -146,9 +143,9 @@ nav .tag.house:hover {
 }
 header h1 {
   float: left;
-  width: 29.166666666666668%;
-  margin-left: 1.0416666666666665%;
-  margin-right: 1.0416666666666665%;
+  width: 280px;
+  margin-left: 10px;
+  margin-right: 10px;
   height: 100px;
   margin-top: 50px;
   margin-bottom: 60px;
@@ -161,6 +158,7 @@ header h1 {
 }
 header .side {
   float: right;
+  margin-right: 10px;
   font-size: 1.1em;
 }
 header .intro {
@@ -178,17 +176,89 @@ header .share {
 header .share li {
   float: left;
 }
-nav {
-  display: none;
+.navigation {
+  -webkit-transition: 0.2s top ease-out;
+  -moz-transition: 0.2s top ease-out;
+  -o-transition: 0.2s top ease-out;
+  -ms-transition: 0.2s top ease-out;
+  transition: 0.2s top ease-out;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  width: 100%;
+  height: 74px;
+  background: rgba(255,255,255,0.98);
+  -webkit-box-shadow: 0 4px 2px rgba(0,0,0,0.08);
+  box-shadow: 0 4px 2px rgba(0,0,0,0.08);
+}
+.navigation.hide {
+  top: -80px;
+}
+.navigation .home {
+  float: left;
+  width: 220px;
+  margin-left: 10px;
+  margin-right: 10px;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  line-height: 50px;
+  text-indent: 101%;
+  white-space: nowrap;
+  overflow: hidden;
+  background-image: url("../images/presenteria-pocket.png");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+.navigation nav {
+  position: relative;
+  width: 960px;
+  margin: 0 auto;
+}
+.navigation ul {
+  float: right;
+  padding-top: 22px;
+}
+.navigation ul li {
+  float: left;
+}
+.navigation .tag {
+  margin: 0 10px;
+  font-size: 1em;
+}
+.navigation .active {
+  border: none;
+  height: 1.6em;
+  padding: 0 5px;
+  margin: 0 5px;
+}
+.navigation .tag.man.active {
+  background: rgba(139,147,178,0.2);
+}
+.navigation .tag.woman.active {
+  background: rgba(224,108,118,0.2);
+}
+.navigation .tag.geek.active {
+  background: rgba(252,172,36,0.2);
+}
+.navigation .tag.culture.active {
+  background: rgba(145,81,125,0.2);
+}
+.navigation .tag.sport.active {
+  background: rgba(106,187,139,0.2);
+}
+.navigation .tag.house.active {
+  background: rgba(153,153,153,0.2);
 }
 #content {
   clear: both;
 }
 .gift {
   float: left;
-  width: 22.916666666666668%;
-  margin-left: 1.0416666666666665%;
-  margin-right: 1.0416666666666665%;
+  width: 220px;
+  margin-left: 10px;
+  margin-right: 10px;
   position: relative;
 }
 .gift .product {
@@ -447,4 +517,3 @@ nav {
     p, h2, h3 { orphans: 3; widows: 3; }
     h2, h3{ page-break-after: avoid; }
 }
->>>>>>> a508a0d... cool shadow on gift box
