--- a/source/styles/gift-photo.styl
+++ b/source/styles/gift-photo.styl
@@ -1,9 +1,12 @@
+
+// -. .-. PHOTO .-. .-.
+
 .photo
     background: white
     position: relative
     border-top: 5px solid white
     border-bottom: 5px solid white
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.05)
+    box-shadow: 1px 1px 2px rgba(black, 0.05)
     img
         width: 100%
 
@@ -14,7 +17,7 @@
         width: 50%
         height: 100px
         bottom: 8px
-        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15)
+        box-shadow: 0 6px 20px rgba(black, 0.15)
     &:before
         right: 13px
         transform: rotate(5deg) skew(5deg)
@@ -22,13 +25,13 @@
         left: 13px
         transform: rotate(-5deg) skew(-5deg)
 
-// -. .-. CORNERS .-. .-.
+// -. .-. PHOTO CORNERS .-. .-.
 
-corners = bottom  right  after   -16deg, 
-          top     right  before  -106deg, 
-          bottom  left   after    76deg
+photo-corners = bottom  right  after   -16deg, 
+                top     right  before  -106deg, 
+                bottom  left   after    76deg
 
-for corner in corners
+for corner in photo-corners
     c = corner[0] + '-' + corner[1]
     {'.corner-' + c}
         {'border-' + c + '-radius'}: 36px
@@ -41,5 +44,5 @@ for corner in corners
             width: 16px
             height: 12px
             z-index: 0
-            box-shadow: -2px -1px 1px rgba(0, 0, 0, 0.1)
+            box-shadow: -2px -1px 1px rgba(black, 0.1)
             transform: rotate(corner[3]) skew(-40deg, -3deg) translate3d(0, 0, 0)
