--- a/source/styles/main.styl
+++ b/source/styles/main.styl
@@ -32,8 +32,8 @@ header, nav
     .tag
         text-decoration: none
         font-weight: 700
+        line-height: 1.6
         height: 1.3em
-        padding-bottom: -2px
         display: inline-block
         border-bottom: 1px solid
 
@@ -50,6 +50,7 @@ header
         replace-text: url('../images/presenteria.png')
     .side
         float: right
+        margin-right: gutterwidth * .5
         font-size: 1.1em
     .intro
         margin-top: 40px
@@ -64,9 +65,9 @@ header
             float: left
 
 
-// -. .-. NAV .-. .-.
-nav
-    display: none
+// -. .-. NAVIGATION .-. .-.
+
+@import 'navigation.styl'
 
 // -. .-. CONTENT .-. .-.
 
