--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -254,6 +254,27 @@ header .share li {
 #content {
   clear: both;
 }
+.column {
+  float: left;
+}
+.four-columns .column {
+  float: left;
+  width: 220px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.three-columms .column {
+  float: left;
+  width: 160px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.two-columms .column {
+  float: left;
+  width: 160px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
 .gift {
   float: left;
   width: 220px;
