--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -257,23 +257,8 @@ header .share li {
 .column {
   float: left;
 }
-.four-columns .column {
-  float: left;
-  width: 220px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-.three-columms .column {
-  float: left;
-  width: 160px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-.two-columms .column {
-  float: left;
-  width: 160px;
-  margin-left: 10px;
-  margin-right: 10px;
+.column .gift {
+  float: none;
 }
 .gift {
   float: left;
