--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -164,7 +164,7 @@ header .side {
 header .intro {
   margin-top: 40px;
   text-align: right;
-  line-height: 1.5;
+  line-height: 1.1;
 }
 header .tag {
   font-size: 1.3em;
@@ -266,6 +266,7 @@ header .share li {
   margin-left: 10px;
   margin-right: 10px;
   position: relative;
+  margin-bottom: 35px;
 }
 .gift .product {
   color: #5b323e;
@@ -279,9 +280,13 @@ header .share li {
 }
 .gift .description {
   display: inline-block;
+  font-size: 13px;
+  line-height: 1.3;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .gift .vendor {
-  float: right;
+  margin-left: 10px;
 }
 .gift .store,
 .gift .price {
@@ -292,7 +297,8 @@ header .share li {
 }
 .gift .price {
   display: inline-block;
-  font-weight: 700;
+  font-weight: bold;
+  font-size: 14px;
 }
 .gift .tags {
   position: absolute;
@@ -339,7 +345,7 @@ header .share li {
   -o-transition: top 0.1s ease-out;
   -ms-transition: top 0.1s ease-out;
   transition: top 0.1s ease-out;
-  top: -28px;
+  top: -24px;
   left: 0;
 }
 .gift:hover .tag {
@@ -348,10 +354,10 @@ header .share li {
   -o-transition: height 0.1s ease-out;
   -ms-transition: height 0.1s ease-out;
   transition: height 0.1s ease-out;
-  height: 28px;
+  height: 24px;
   width: auto;
-  line-height: 28px;
-  font-size: 1em;
+  line-height: 24px;
+  font-size: 10px;
   padding: 0 10px;
 }
 .gift:hover .tag:hover {
@@ -396,12 +402,12 @@ header .share li {
 .photo {
   background: #fff;
   position: relative;
-  border-top: 5px solid #fff;
-  border-bottom: 5px solid #fff;
+  border-top: 10px solid #fff;
+  border-bottom: 10px solid #fff;
   -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.05);
   box-shadow: 1px 1px 2px rgba(0,0,0,0.05);
 }
-.photo img {
+.photo > img {
   width: 100%;
 }
 .photo:before,
@@ -434,13 +440,13 @@ header .share li {
 .corner-bottom-right {
   border-bottom-right-radius: 36px;
 }
-.corner-bottom-right img {
+.corner-bottom-right > img {
   border-bottom-right-radius: 36px;
 }
 .corner-bottom-right:after {
   left: auto;
-  bottom: 1px;
-  right: 3px;
+  bottom: -4px;
+  right: 4px;
   width: 16px;
   height: 12px;
   z-index: 0;
@@ -455,13 +461,13 @@ header .share li {
 .corner-top-right {
   border-top-right-radius: 36px;
 }
-.corner-top-right img {
+.corner-top-right > img {
   border-top-right-radius: 36px;
 }
 .corner-top-right:before {
   left: auto;
-  top: 1px;
-  right: 3px;
+  top: -4px;
+  right: 4px;
   width: 16px;
   height: 12px;
   z-index: 0;
@@ -476,13 +482,13 @@ header .share li {
 .corner-bottom-left {
   border-bottom-left-radius: 36px;
 }
-.corner-bottom-left img {
+.corner-bottom-left > img {
   border-bottom-left-radius: 36px;
 }
 .corner-bottom-left:after {
   left: auto;
-  bottom: 1px;
-  left: 3px;
+  bottom: -4px;
+  left: 4px;
   width: 16px;
   height: 12px;
   z-index: 0;
