--- a/source/styles/gift-photo.styl
+++ b/source/styles/gift-photo.styl
@@ -4,10 +4,10 @@
 .photo
     background: white
     position: relative
-    border-top: 5px solid white
-    border-bottom: 5px solid white
+    border-top: 10px solid white
+    border-bottom: 10px solid white
     box-shadow: 1px 1px 2px rgba(black, 0.05)
-    img
+    > img
         width: 100%
 
     &:before, &:after
@@ -35,12 +35,12 @@ for corner in photo-corners
     c = corner[0] + '-' + corner[1]
     {'.corner-' + c}
         {'border-' + c + '-radius'}: 36px
-        img
+        > img
             {'border-' + c + '-radius'}: 36px
         {'&:' + corner[2]}
             left: auto
-            {corner[0]}: 1px
-            {corner[1]}: 3px
+            {corner[0]}: -4px
+            {corner[1]}: 4px
             width: 16px
             height: 12px
             z-index: 0
